--- a/public/less/index.less
+++ b/public/less/index.less
@@ -230,6 +230,18 @@ header {
       padding-top: 10px;
     }
 
+    #input__clear{
+    opacity: 0.5;
+    font-size: 20px;
+    cursor: pointer;
+    visibility: hidden;
+    float: left;
+    margin-left: -30px;
+    width: 20px;
+    height: 20px;
+    padding-top: 5px;
+    }
+
 }
 
 @media screen and (max-width: 990px){
@@ -242,6 +254,9 @@ header {
   }
   .width50{
     width:50%;
+  }
+  .col-xs-9{
+    width: 50%;
   }
   #manager-panel input{
     width:50%;
