--- a/public/js/pages/templates/TableIssueTemplate.html
+++ b/public/js/pages/templates/TableIssueTemplate.html
@@ -42,7 +42,7 @@
        </select>
         </td>
         <td class="edit-icons">
-          <a href="#"><i class="fa fa-file-text-o"></i></a>
+          <a href="#issue/<%= issue.id %>" target="_blank"><i class="fa fa-file-text-o"></i></a>
           <a href="#"><i class="fa fa-pencil"></i></a>
           <a href="#"><i class="fa fa-thumbs-o-up"></i></a>
           <a href="#"><i class="fa fa-thumbs-o-down"></i></a>
