"Detail issue" styles

--- a/public/less/index.less
+++ b/public/less/index.less
@@ -263,15 +263,15 @@ header {
   }
   header{
     ul li{
-  display: block;
-  float:none;
-  width:100%;
-  line-height: 40px;
+      display: block;
+      float:none;
+      width:100%;
+      line-height: 40px;
     }
-  #login-button, #logout-button, #about-button{
-    margin: 0px;
-    float: none;
-  }  
+    #login-button, #logout-button, #about-button{
+      margin: 0px;
+      float: none;
+    }  
   }
   /*#left-sidebar{
     display:none;
@@ -279,3 +279,5 @@ header {
   */
 }
 /*End of manager page styles */
+
+@import "blocks/issue-details.less";
