--- a/public/js/pages/templates/IssueDetails.html
+++ b/public/js/pages/templates/IssueDetails.html
@@ -1,14 +1,51 @@
 <div id="issue-container">
-  <h2><%= name %></h2>
-  <% _.each(attachments, function(attach){%>
-	<img src="//<%= attach.url %>" width="100%" height="auto">
-  <% }); %>
-  <div class="issue-desciption">
+	<div class="resolve-wrapp">
+		<button id="resolve">Resolve</button>
+	</div>
+	<h3><%= name %></h3>
 	<div class="desc-text">
-		<h3>Issue description:</h3>
 		<p><%= description %></p>
 	</div>
-	<span><strong>Issue category:</strong> <%= category.name %></span>
-	<span id="resolve">Resolve</span>
- </div>
+	<div class="img-container">
+		<% _.each(attachments, function(attach){%>
+			<img src="//<%= attach.url %>" width="100%" height="auto">
+		<% }); %>
+	</div>
+	<div class="comments">
+		<h2>Coments</h2>
+		<div class="comment">
+			<span>Alex</span>
+			<span class="comment-text">He always breaks</span>
+		</div>
+		<div class="comment">
+			<span>Oleg</span>
+			<span class="comment-text">It's realy bad street</span>
+		</div>
+		<div class="comment">
+			<span>Leon</span>
+			<span class="comment-text">This comments is realy long. sdsdsdsd sdsd sdsdsds wwwwe wewew </span>
+		</div>
+		<form class="form-horizontal">
+			<h3>Your coment</h3>
+			<div class="form-group">
+				<label for="name" class="col-sm-3 col-lg-4 control-label">Name:</label>
+				<div class="col-sm-9 col-lg-8">
+					<input type="name" class="form-control" id="name">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="email" class="col-sm-3 col-lg-4 control-label">E-mail:</label>
+				<div class="col-sm-9 col-lg-8">
+					<input type="email" class="form-control" id="email">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="comment" class="col-sm-3 col-lg-4 control-label">Comment:</label>
+				<div class="col-sm-9 col-lg-8">
+					<textarea class="form-control" rows="3" id="comment"></textarea>
+				</div>
+			</div>
+			<button type="submit" class="btn btn-default add-comment">Comment</button>
+		</form>
+	</div>
 </div>
