--- a/public/less/index.less
+++ b/public/less/index.less
@@ -12,6 +12,9 @@ header {
 	font-size: 24;
 	width: 100%;
 	text-align: center;
+  position: fixed;
+  top: 0;
+  z-index: 2;
   a:link{
   color: #ffffff;
   text-decoration: none;
@@ -69,7 +72,9 @@ header {
 .sb-show{
   width: 30%;
 }
-
+#main-container{
+  padding-top: 80px;
+}
 #page, #main-container, #map-canvas {
 	height: 100%;
 }
@@ -243,7 +248,57 @@ header {
     }
 
 }
-
+/* Admin page Modal window style start*/
+#AddUserModal{
+  
+.modal-header{
+    background-color: @header-background-color;  
+}
+  .close{
+    margin: 0;
+    padding: 0;
+    font-size: 21px;
+    background-color: inherit;
+    color: white;
+    opacity: 1;
+  }
+.modal-title{
+    line-height: 1;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+}
+.user-picture{
+  margin-top: 20px;
+}
+.form-horizontal .control-label{
+  padding-top: 0px;
+  font-weight: normal;
+}
+.form-group{
+ margin-bottom:0px;
+}
+#add-user-form input{
+border-radius: 0px;
+height: 23px;
+font-size: 10px;
+line-height: 1;
+box-shadow: none;
+-webkit-box-shadow:
+border: 1px solid #F3EDED;
+}
+.modal-footer{
+  padding:0 0 15px 0;
+  text-align: center;
+  border: none;
+  button{
+  border-radius:0px;
+  font-size: 18px;
+  width: 120px;
+}
+}
+}
+/* Admin page Modal window styles end*/
 @media screen and (max-width: 990px){
   #manager-panel .fa-align-justify{
     display:block;
