--- a/public/js/pages/templates/AdminTemplate.html
+++ b/public/js/pages/templates/AdminTemplate.html
@@ -15,7 +15,51 @@
                 <li id="add-user">Add user</li>
                 <li id="check-user">Check user</li>
             </ul>
+<div class="modal fade" id="AddUserModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Add User</h4>
+      </div>
+      <div class="modal-body">
+        <form id="add-user-form" class="form-horizontal col-md-9">
+          <div class="form-group">
+          <label for="email" class="col-sm-4 control-label">Email</label>
+          <div class="col-sm-8">
+          <input type="email" name="email" class="form-control">
+          </div>
+          </div>
+          <div class="form-group">
+          <label for="password" class="col-sm-4 control-label">Password</label>
+          <div class="col-sm-8">
+          <input type="password" name="password" class="form-control">
+          </div>
+          </div>
+          <div class="form-group">
+          <label for="confirm-password" class="col-sm-4 control-label">Confirm Pass</label>
+          <div class="col-sm-8">
+          <input type="password" name="confirm-password" class="form-control">
+          </div>
+          </div> 
+        </form>
+        <div class="user-picture col-md-3">
+        <lable>User Picture</lable>
+        <img src="img/anonymus.png">
+        </div>   
+         
+      </div>
+      <div class="clearfix"></div>
+      <div class="modal-footer">
+        <button type="button" class="btn">Submit</button>
+        <button type="button" class="btn" data-dismiss="modal">Cancel</button>
+      </div>
     </div>
+  </div>
+</div> 
+    </div>
+        <!-- Modal -->
+ 
     <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12" id="manager-panel">
         <span class="fa fa-align-justify" id="left-sidebar-btn"></span>
         <form  id="search-form" action="/issue/search">
@@ -41,6 +85,6 @@
                 </label>
             </div>            
         </form>
-    </div>         
+    </div>      
 </div>
 
