--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -318,3 +318,70 @@ header #main-banner:hover {
   */
 }
 /*End of manager page styles */
+#issue-container {
+  padding: 0 0 0 15px;
+}
+#issue-container h3 {
+  margin-top: 0;
+}
+#issue-container .resolve-wrapp {
+  width: 100%;
+  height: 35px;
+}
+#issue-container .resolve-wrapp #resolve {
+  border: 1px solid #89C3A5;
+  color: #91C8AC;
+  padding: 5px;
+  background: #fff;
+  float: right;
+}
+#issue-container .resolve-wrapp #resolve:hover {
+  color: #000;
+}
+#issue-container .desc-text {
+  margin: 15px 0 15px 0;
+}
+#issue-container .desc-text p {
+  padding: 0;
+  margin: 0;
+}
+#issue-container .img-container {
+  width: 100%;
+}
+#issue-container .img-container img {
+  width: 48%;
+  height: 180px;
+  margin: 0 1% 2% 0;
+  border: 3px solid #DCDDDF;
+}
+#issue-container .comments form {
+  width: 90%;
+  margin: 20px 0 0;
+}
+#issue-container .comments form form-horizontal .control-label {
+  text-align: left;
+}
+#issue-container .comments form form-horizontal input {
+  width: 100%;
+}
+#issue-container .comments form .add-comment {
+  border: 1px solid #BBD9B5;
+  background: #fff;
+  color: #61605F;
+}
+#issue-container .comments .comment span {
+  display: block;
+  color: #EB6C81;
+  font-size: 19px;
+  margin: 5px 0 0;
+}
+#issue-container .comments .comment .comment-text {
+  color: #A3A3A3;
+  font-size: 16px;
+}
+#issue-container .comments .comment .comment-text:after {
+  content: " ";
+  display: block;
+  border-bottom: 2px solid #E9E8E8;
+  margin-top: 10px;
+}
