added category edit view, template

--- a/public/js/pages/templates/EditCategoriesTemplate.html
+++ b/public/js/pages/templates/EditCategoriesTemplate.html
@@ -14,7 +14,7 @@
        <td><%= category.name %></td>
        <td><%= category.confirmed %></td>
        <td class="edit-icons">
-       <a href="#"><i class="fa fa-pencil"></i></a>
+       <a href="#"><i id="edit-category" class="fa fa-wrench"></i></a>
       </i></td>
      </tr>
        <% }) %>
