Add show users table template

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -312,10 +312,9 @@ header #main-banner:hover {
     margin: 0px;
     float: none;
   }
-  /*#left-sidebar{
-    display:none;
+  #main-container {
+    padding-top: 160px;
   }
-  */
 }
 /*End of manager page styles */
 #issue-container {
