--- a/public/less/index.less
+++ b/public/less/index.less
@@ -328,10 +328,9 @@ border: 1px solid #F3EDED;
       float: none;
     }  
   }
-  /*#left-sidebar{
-    display:none;
+  #main-container {
+    padding-top: 160px;
   }
-  */
 }
 /*End of manager page styles */
 
