--- a/public/js/pages/templates/TableUserTemplate.html
+++ b/public/js/pages/templates/TableUserTemplate.html
@@ -10,35 +10,13 @@
      </tr>
    </thead>
 <tbody>
-<% _.each(users, function(user) { %>
-     <tr data-id="<%=issue.id%>">
-        <td><%= user.id %></td>
-        <td><%= user.email %></td>
-        <td>        
-               <select name="category-selector" class="category-selector form-control">
-                  <% _.each(categories, function(category, key, list) { %>      
-                  <option value="<%= category.id %>"        
-                  <%if(issue.category_id == category.id) {%>selected <%} %>
-                  >
-                       <%= category.name %>     
-                   </option>      
-                  <% }) %>      
-              </select>
-        </td>
-        <td>
-            <select name="status-slector" class="status-selector form-control">
-           <% _.each(statuses, function(status, key, list) { %>
-           <option value="<%= status.id %>" 
-            <%if(issue.history_up_to_date.status_id == status.id) {%>selected <%} %>
-            >
-                <%= status.name %> 
-            </option>
-           <% }) %>
+<% _.each(users, function(useritem) { %>
+     <tr data-id="<%=useritem.get('id')%>">
+        <td><%= useritem.id %></td>
+        <td><%= useritem.email %></td>
 
-       </select>
-        </td>
         <td class="edit-icons">
-          <a href="#issue/<%= issue.id %>" target="_blank"><i class="fa fa-file-text-o"></i></a>
+          <a href="#issue/<%= useritem.id %>" target="_blank"><i class="fa fa-file-text-o"></i></a>
           <a href="#"><i class="fa fa-pencil"></i></a>
           <a href="#"><i class="fa fa-thumbs-o-up"></i></a>
           <a href="#"><i class="fa fa-thumbs-o-down"></i></a>
