--- a/public/js/pages/templates/AdminTemplate.html
+++ b/public/js/pages/templates/AdminTemplate.html
@@ -27,31 +27,40 @@
           <div class="form-group">
           <label for="email" class="col-sm-4 control-label">Email</label>
           <div class="col-sm-8">
-          <input type="email" name="email" class="form-control">
+          <input type="email" name="email" id="email" class="form-control">
           </div>
           </div>
           <div class="form-group">
           <label for="password" class="col-sm-4 control-label">Password</label>
           <div class="col-sm-8">
-          <input type="password" name="password" class="form-control">
+          <input type="password" name="password" id="password" class="form-control">
           </div>
           </div>
           <div class="form-group">
           <label for="confirm-password" class="col-sm-4 control-label">Confirm Pass</label>
           <div class="col-sm-8">
-          <input type="password" name="confirm-password" class="form-control">
+          <input type="password" name="confpass" class="form-control" id="confpass">
           </div>
           </div> 
         </form>
         <div class="user-picture col-md-3">
-        <lable>User Picture</lable>
-        <img src="img/anonymus.png">
+        <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Your Photo </label>
+        <div class="form-group">
+          <div class="image-upload col-lg-8 col-md-8 col-sm-8 col-xs-8">
+            <label for="imgInp">
+              <div id="over">
+                <img id="blah" src="img/anonymus.png" class="img-thumbnail">
+              </div>
+            </label>
+            <input  type="file" id="imgInp"/>
+          </div>
+        </div>
         </div>   
          
       </div>
       <div class="clearfix"></div>
       <div class="modal-footer">
-        <button type="button" class="btn">Submit</button>
+        <button type="button" class="btn" id="adduser-btn">Submit</button>
         <button type="button" class="btn" data-dismiss="modal">Cancel</button>
       </div>
     </div>
