1. Added users table to admin page. 2. Implemented HTML button for remove user.

--- a/public/js/pages/templates/AdminTemplate.html
+++ b/public/js/pages/templates/AdminTemplate.html
@@ -12,6 +12,7 @@
                 </div>
         </div>
             <ul>
+                <li id="all-users">All users</li>
                 <li id="add-user">Add user</li>
                 <li id="check-user">Check user</li>
             </ul>
@@ -85,6 +86,7 @@
                 </label>
             </div>            
         </form>
+        <div id="manager-panel-table"></div>
     </div>      
 </div>
 
