--- a/public/js/pages/templates/TableUserTemplate.html
+++ b/public/js/pages/templates/TableUserTemplate.html
@@ -1,4 +1,4 @@
-<div class="table-responsive">  
+<div class="table-responsive"> 
 <table class="table table-bordered table-hover table-condensed">
    <thead>
      <tr>
@@ -11,37 +11,16 @@
    </thead>
 <tbody>
 <% _.each(users, function(user) { %>
-     <tr data-id="<%=issue.id%>">
+     <tr data-id="<%=user.id%>">
         <td><%= user.id %></td>
-        <td><%= user.email %></td>
-        <td>        
-               <select name="category-selector" class="category-selector form-control">
-                  <% _.each(categories, function(category, key, list) { %>      
-                  <option value="<%= category.id %>"        
-                  <%if(issue.category_id == category.id) {%>selected <%} %>
-                  >
-                       <%= category.name %>     
-                   </option>      
-                  <% }) %>      
-              </select>
-        </td>
-        <td>
-            <select name="status-slector" class="status-selector form-control">
-           <% _.each(statuses, function(status, key, list) { %>
-           <option value="<%= status.id %>" 
-            <%if(issue.history_up_to_date.status_id == status.id) {%>selected <%} %>
-            >
-                <%= status.name %> 
-            </option>
-           <% }) %>
-
-       </select>
-        </td>
+        <td><%= user.get('email') %></td>
+        <td><%= user.get('role_id') %></td>
+        <td><%= user.get('status_id') %></td>
         <td class="edit-icons">
-          <a href="#issue/<%= issue.id %>" target="_blank"><i class="fa fa-file-text-o"></i></a>
-          <a href="#"><i class="fa fa-pencil"></i></a>
-          <a href="#"><i class="fa fa-thumbs-o-up"></i></a>
-          <a href="#"><i class="fa fa-thumbs-o-down"></i></a>
+          <a href="#"><i class="fa fa-pencil user-edit-button"></i></a>
+          <% if (user.get('status_id')!=3) { %>
+            <a href="#"><i class="glyphicon glyphicon-remove user-remove-button"></i></a>
+          <% } %>
         </i></td>
 <% }) %>
      </tr>
