--- a/public/js/pages/templates/AdminTemplate.html
+++ b/public/js/pages/templates/AdminTemplate.html
@@ -24,35 +24,49 @@
         <h4 class="modal-title" id="myModalLabel">Add User</h4>
       </div>
       <div class="modal-body">
-        <form id="add-user-form" class="form-horizontal col-md-9">
+        <form id="add-user-form" class="form-horizontal">
+          <div class="col-md-9">
           <div class="form-group">
           <label for="email" class="col-sm-4 control-label">Email</label>
           <div class="col-sm-8">
-          <input type="email" name="email" class="form-control">
+          <input type="email" name="email" class="form-control" id="email">
+          <div class="col-xs-12 help-block hidden"></div>
           </div>
           </div>
           <div class="form-group">
           <label for="password" class="col-sm-4 control-label">Password</label>
           <div class="col-sm-8">
-          <input type="password" name="password" class="form-control">
+          <input type="password" name="password" class="form-control" id="password">
+          <div class="col-xs-12 help-block hidden"></div>
           </div>
           </div>
           <div class="form-group">
           <label for="confirm-password" class="col-sm-4 control-label">Confirm Pass</label>
           <div class="col-sm-8">
-          <input type="password" name="confirm-password" class="form-control">
+          <input type="password" name="confirm-password" class="form-control" id="confpass">
+          <div class="col-xs-12 help-block hidden"></div>
           </div>
           </div> 
-        </form>
+          </div>
         <div class="user-picture col-md-3">
-        <lable>User Picture</lable>
-        <img src="img/anonymus.png">
-        </div>   
+        <div class="form-group">
+          <label for="photo">Your Photo </label>
+          <div class="image-upload">
+            <label for="imgInp">
+              <div id="over">
+                <img id="blah" src="img/anonymus.png" class="img-thumbnail">
+              </div>
+            </label>
+            <input  type="file" id="imgInp"/>
+          </div>
+        </div>
+        </div>
+        </form>   
          
       </div>
       <div class="clearfix"></div>
       <div class="modal-footer">
-        <button type="button" class="btn">Submit</button>
+        <button type="button" id="adduser-btn" class="btn">Submit</button>
         <button type="button" class="btn" data-dismiss="modal">Cancel</button>
       </div>
     </div>
