--- a/public/js/pages/templates/SignUpFormTemplate.html
+++ b/public/js/pages/templates/SignUpFormTemplate.html
@@ -32,7 +32,7 @@
  		<div class="row">
  			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
  				<div class="form-group">
- 					<label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Your Photo </label>
+ 					<label for="photo">Your Photo </label>
  					<div class="image-upload col-lg-8 col-md-8 col-sm-8 col-xs-8">
  						<label for="imgInp">
  							<div id="over">
