Added ability to add multiple photos of the issue

--- a/public/js/pages/templates/IssueDetails.html
+++ b/public/js/pages/templates/IssueDetails.html
@@ -8,7 +8,7 @@
 	</div>
 	<div class="img-container">
 		<% _.each(attachments, function(attach){%>
-			<img src="//<%= attach.url %>" width="100%" height="auto">
+			<img src="<%= attach.url %>" width="100%" height="auto">
 		<% }); %>
 	</div>
 	<div class="comments">
