--- a/public/less/index.less
+++ b/public/less/index.less
@@ -74,6 +74,10 @@ header {
 }
 #main-container{
   padding-top: 80px;
+  
+  #sb {
+    height: 100%;
+  }
 }
 #page, #main-container, #map-canvas {
 	height: 100%;
@@ -331,3 +335,4 @@ border: 1px solid #F3EDED;
 }
 /*End of manager page styles */
 @import "blocks/issue-details.less";
+@import "blocks/cryout.less";
