--- a/public/js/pages/templates/CryOutTemplate.html
+++ b/public/js/pages/templates/CryOutTemplate.html
@@ -1,14 +1,10 @@
-
-
-
-
 <div id="cry-out-container">
-  <h1>Додати проблему</h1>
+  <h1>Add new issue</h1>
   <div class="text-center">
     <ul class="nav nav-tabs center-pills" role="tablist">
-      <li role="presentation" class="issue-tab set-location active"><a href="#point" aria-controls="home" role="tab" data-toggle="tab">Точка</a></li>
-      <li role="presentation" class="issue-tab set-description"><a href="#description" aria-controls="profile" role="tab" data-toggle="tab">Опис</a></li>
-      <li role="presentation" class="issue-tab set-attachment"><a href="#photo" aria-controls="messages" role="tab" data-toggle="tab">Фото</a></li>
+      <li role="presentation" class="issue-tab set-location active"><a href="#point" aria-controls="home" role="tab" data-toggle="tab">Coordinates</a></li>
+      <li role="presentation" class="issue-tab set-description"><a href="#description" aria-controls="profile" role="tab" data-toggle="tab">Description</a></li>
+      <li role="presentation" class="issue-tab set-attachment"><a href="#photo" aria-controls="messages" role="tab" data-toggle="tab">Photo</a></li>
     </ul>
   </div>
   
@@ -18,34 +14,48 @@
     <div role="tabpanel" class="tab-pane active" id="point">
       <div class="form-group">
         <p class="issue-address">Відмітьте на карті місце розташування проблеми</p>
-        <button class="btn-next">Далі</button>
+        <button class="btn-next">Next</button>
       </div>
     </div>
 
-    <div role="tabpanel" class="tab-pane" id="description">
+    <div role="tabpanel" class="tab-pane form-horizontal" id="description">
       <div class="form-group">
-        <label for="issue-name">Коротка назва проблеми</label>
-        <input type="text" id="issue-name" class="desc-data form-control">
+        <label for="issue-name" class="col-sm-3 col-lg-4 control-label">Title:</label>
+        <div class="col-sm-9 col-lg-8">
+			<input type="text" id="issue-name" class="desc-data form-control">
+		</div>
       </div>
       <div class="form-group">
-        <label for="issue-type">Tип проблеми</label>
-        <input type="text" id="issue-type" class="desc-data form-control">
+        <label for="issue-type" class="col-sm-3 col-lg-4 control-label">Type:</label>
+		<div class="col-sm-9 col-lg-8">
+			<input type="text" id="issue-type" class="desc-data form-control">
+		</div>
       </div>
       <div class="form-group">
-        <label for="issue-description">Опис проблеми</label>
-        <input type="text" id="issue-description" class="desc-data form-control">
+        <label for="issue-description" class="col-sm-3 col-lg-4 control-label">Description:</label>
+		<div class="col-sm-9 col-lg-8">
+			<textarea id="issue-description" class="desc-data form-control"></textarea>
+		</div>
       </div>
       <div class="form-group">
-        <button class="btn-next" >Далі</button>
+        <button class="btn-next" >Next</button>
       </div>
     </div>
 
     <div role="tabpanel" class="tab-pane" id="photo">
-      <img src="#" id="photo-container" style="display:none">
       <form enctype="multipart/form-data" method="post" id="fileform">
-        <input id="fileUpload" type="file" name="attachments">
+		<div class="img-container image_0">
+			<div class="image-item-wrapp">
+				<img src="/img/empty-image.png" class="photo-container">
+				<input class="fileUpload" type="file" name="attachments[]">
+				<button class="image-remove">Remove image</button>
+			</div>
+		</div>
       </form>
-      <button id="AddIssueButton">Create new issue</button>
+	  <div class="controll-buttons">
+		<button class="more-image">Add image</button>
+		<button id="AddIssueButton">Create new issue</button>
+      </div>
     </div>
   </div>
 </div>
