Add posibility ti see statistic in chart

--- a/public/js/pages/templates/header.html
+++ b/public/js/pages/templates/header.html
@@ -1,7 +1,7 @@
 <ul>
     <li id="main-banner">bawl</li>
     <a href="#issue"><li id="cry-out-button">Cry out</li></a>
-    <li id="about-button">About</li>
+    <a href="#statistic"><li id="about-button">About</li></a>
     <% if(logged_in){ %>
     <a href="#" id="logout-btn"><li id="logout-button"><div id="logout-button" class="header-elements">Logout</li></a>
     <a href="#profile" id="profile-lnk"><li id="profile">Hello,</br> <%=user.email%></li>
