--- a/public/less/index.less
+++ b/public/less/index.less
@@ -305,6 +305,9 @@ border: 1px solid #F3EDED;
     display:block;
     cursor: pointer;
   }
+  #manager-panel, #left-sidebar{
+    margin-top:80px;
+  }
   .sidebar-mobile{
     display: none;
   }
@@ -334,7 +337,6 @@ border: 1px solid #F3EDED;
   }
 }
 /*End of manager page styles */
-<<<<<<< HEAD
 
 /* Style for diagram*/
  .legend {
