--- a/public/less/blocks/cryout.less
+++ b/public/less/blocks/cryout.less
@@ -1,32 +1,43 @@
 #cry-out-container {
-    padding: 0 0 0 20px;
+    padding: 0 0 20px 20px;
     
     #description {
         input {
             width: 100%;
         }
     }
-    
     #photo {
-        .image-item-wrapp {
-            padding: 10px;
-            border: 3px solid #DDDDDD;
-            border-radius: 5px;
-            margin: 10px;
-            
-            button {
-                margin: 5px 0 0 0;
+        .img-container {
+            &:first-child {
+                button {
+                    display: none;
+                }
             }
-            
-            img {
-                margin-bottom: 10px;
-                border: 1px solid #000;
-                width: 100%;
-                height: auto;
+            .image-item-wrapp {
+                padding: 10px;
+                border: 3px solid #DDDDDD;
+                border-radius: 5px;
+                margin: 10px;
+                
+                button {
+                    margin: 5px 0 0 0;
+                }
+                
+                img {
+                    margin-bottom: 10px;
+                    border: 1px solid #000;
+                    width: 100%;
+                    height: auto;
+                }
+                
+                .image-slide {
+                    display: none;
+                }
+                
+                input{
+                    width: 100%;
+                }
             }
-            input{
-                width: 100%;
-            }
-        }
+        } 
     }
 }
