--- a/public/js/pages/templates/StatisticTemplate.html
+++ b/public/js/pages/templates/StatisticTemplate.html
@@ -3,11 +3,8 @@
     <div class="col-lg-3 col-md-3 sidebar-mobile" id="left-sidebar" >
         <div class="profile row"> 
             <ul style = "margin-top:50px">
+                <li id="all-link">Charts</li>
                 <li id="about-link">Information about project</li>
-                <li id="all-link">All</li>
-                <li id="category-link">By category</li>
-                <li id="status-link">By status</li>
-                <li id="time-link">By time</li>
             </ul>
         </div>
     </div>
@@ -20,6 +17,12 @@
              <div class = "col-lg-6 col-md-6 col-sm-12 col-xs-12">
                 <p style = "text-align:center; font-size:18px">Categories</p>
                 <div id="chart2" style = "text-align:center"></div>
+            </div>
+        </div>
+        <div class = "row top-buffer">
+            <div class = "col-lg-6 col-md-6 col-sm-12 col-xs-12"  >
+                <p style = "text-align:center; font-size:18px" id = "HelpTitle"></p>
+                <div id="chart3" style = "text-align:center"></div>
             </div>
         </div>
     </div>         
