--- a/public/less/index.less
+++ b/public/less/index.less
@@ -349,7 +349,18 @@ border: 1px solid #F3EDED;
     height: 360px;                                                  
     position: relative;                                             
     width: 360px;                                                   
-  }                                                                 
+  }  
+   #chart2 {                                                            
+    height: 360px;                                                  
+    position: relative;                                             
+    width: 360px;                                                   
+  } 
+  #chart3 {                                                            
+    height: 360px;                                                  
+    position: relative;                                             
+    width: 360px;                                                   
+  } 
+  .top-buffer { margin-top:20px; }                                                               
   .tooltipp {                                                        
     background: #eee;                                               
     box-shadow: 0 0 5px #999999;                                    
