Final bugs fixed

--- a/public/js/pages/templates/ChangePasswordTemplate.html
+++ b/public/js/pages/templates/ChangePasswordTemplate.html
@@ -15,7 +15,7 @@
 				<input type="password" class="form-control" id="pwd-confirm">
 				</div>
 				</div>
-				<button type="submit" id="password-change-button" class="btn btn-default">Change</button>
+				<button type="submit" id="password-change-button">Change</button>
 		</form>
 	</div>
 </div>
